--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <img src="/Users/jeesunkim/Desktop/Code/UX_UI_HW_17_JEESUN/Images/JEESUN KIM.png"/>
 
                     <span class="navLinkContainer">
-                        <a href="#" target="_blank" class="navLink">Portfolio</a>
+                        <a href="https://jeesun-ux.github.io/UX_UI_20_Casestudy_Jeesun/" target="_blank" class="navLink">Case Study</a>
                         <a href="#" target="_blank" class="navLink">About Me</a>
                         <a href="#" target="_blank" class="navLink">Contact</a>
                     </span>      
