--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="content">
             <div class="container">        
                 <div class="top-nav">
-                    <img src="/Users/jeesunkim/Desktop/Code/UX_UI_HW_17_JEESUN/Images/JEESUN KIM.png"/>
+                    <img src="images/JEESUN KIM.png"/>
 
                     <span class="navLinkContainer">
                         <a href="https://jeesun-ux.github.io/UX_UI_20_Casestudy_Jeesun/" target="_blank" class="navLink">Case Study</a>
@@ -41,13 +41,13 @@
 
                 <div class="row">                               
                     <div class="column columnBackground">
-                        <img class="toprightimg" src="/Users/jeesunkim/Desktop/Code/UX_UI_HW_17_JEESUN/Images/topleft.png"/>
+                        <img class="toprightimg" src="images/topleft.png"/>
                     </div>
                             
                     <div class="column columnBackground">
                         <div class="row">
                             <div class="column innerColumnImg">
-                                <img class="rightimg" src="/Users/jeesunkim/Desktop/Code/UX_UI_HW_17_JEESUN/Images/topright.png"/>
+                                <img class="rightimg" src="images/topright.png"/>
                             </div>
                             <div class="column">
                                 Effective Navigations </br></br>   Meaningful Elements </br></br>  Accessibility Studying
@@ -70,7 +70,7 @@
 
                 <div class="row">
                     <div class="column columnBackground">
-                        <img class="bottomleftimg" src="/Users/jeesunkim/Desktop/Code/UX_UI_HW_17_JEESUN/Images/bottomleft.png"/>
+                        <img class="bottomleftimg" src="images/bottomleft.png"/>
                     </div>
                     <div class="column columnBackground">
                         <div class="row">
@@ -78,7 +78,7 @@
                                 Creating Mobile Application </br></br>  Group Project
                             </div>
                             <div class="column innerColumnImg">
-                                <img class="rightimg" src="/Users/jeesunkim/Desktop/Code/UX_UI_HW_17_JEESUN/Images/bottomright.png"/>
+                                <img class="rightimg" src="images/bottomright.png"/>
                             </div>
                         </div>
                     </div>
@@ -89,10 +89,10 @@
         <div class="footer">
                 <ul class="social">
                     <li class="icon linklnIcon">
-                        <img class="linkIn" src="/Users/jeesunkim/Desktop/Code/UX_UI_HW_17_JEESUN/Images/Linkln.png"/>
+                        <img class="linkIn" src="images/Linkln.png"/>
                     </li>
                     <li class="icon InstaIcon">
-                        <img class="instagram" src="/Users/jeesunkim/Desktop/Code/UX_UI_HW_17_JEESUN/Images/instagram (1).png"/>
+                        <img class="instagram" src="images/instagram (1).png"/>
                     </li>
                 </ul>        
 
