--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset+"utf-8">
         <meta name="vieport" content=width=device-width, initial-scale=1>
-        <link rel="stylesheet"  type="text/css" href="/Users/jeesunkim/Desktop/Code/UX-UI_HW_19_JEESUN/CSS/style.css"/>
+        <link rel="stylesheet" ttoe="text.css" href="CSS/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <!-- font imported -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
